# heataxis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: api.md  conf.py  index.md
scripts/: fig_index_comparison.py  plot_fig1_index_construction.py  plot_fig_exposure_history.py
src/heataxis/: __init__.py  _history_figure.py  _index_construction.py  cli.py  constants.py  history.py  indices.py  thresholds.py  viz.py
tests/: test_history.py  test_indices.py  test_thresholds.py  test_viz.py
